fix(css): layout issues for no-flexbox browsers

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -42,6 +42,7 @@
 .cc-no-modern-flexbox {
     .cc-page-wrapper {
         overflow: hidden;
+        height: 100%;
     }
 }
 
