--- a/assets/scss/themes/default/src/categories/cc-category-grid.scss
+++ b/assets/scss/themes/default/src/categories/cc-category-grid.scss
@@ -58,6 +58,7 @@
 }
 
 .cc-category-item {
+    display: block;
     text-decoration: none;
     padding:1px;
     width:100%;
