--- a/src/app/products/cc-product-grid.scss
+++ b/src/app/products/cc-product-grid.scss
@@ -33,6 +33,7 @@
 // TODO: extract to a separate module
 
 .cc-product-item {
+    display: block;
     padding:1px;
     text-decoration: none;
 }
